# node-based-image

./: CMakeLists.txt  README.md
docs/: design.md
include/: BlendNode.hpp  BlurNode.hpp  BrightnessContrastNode.hpp  ColorChannelSplitterNode.hpp  ConvolutionNode.hpp  EdgeDetectionNode.hpp  ImageInputNode.hpp  MainWindow.hpp  Node.hpp  NodeGraph.hpp  NoiseNode.hpp  OutputNode.hpp  ThresholdNode.hpp
src/: BlendNode.cpp  BlurNode.cpp  BrightnessContrastNode.cpp  ColorChannelSplitterNode.cpp  ConvolutionNode.cpp  EdgeDetectionNode.cpp  ImageInputNode.cpp  MainWindow.cpp  Node.cpp  NodeGraph.cpp  NoiseNode.cpp  OutputNode.cpp  ThresholdNode.cpp  main.cpp
